# bulls-corner

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json
backend/: Cargo.toml  backend.did
backend/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  TradingDesk.tsx
frontend/src/ic/: backendActor.ts  config.ts
frontend/src/types/: tradingview.d.ts
