[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ic-cdk = "0.15"
ic-cdk-macros = "0.15"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
ic-stable-structures = "0.6"
ic-cdk-timers = "0.5"
once_cell = "1.19"
thiserror = "1.0"

